test(backtester): expand the test suite
- Implement additional tests focused on scaling positions and various edge cases